# Deep_Learning_projects

./: README.md
Face Recognition ( dlib, mtcnn, haarcascade )/: README.md
GeoMetric Shape Detection from Noisy Image/: Geometric_shape_detection( Bounding Box Design ).ipynb  README.md
Image Captioning ( TensorFlow )/: README.md
Image Captioning ( TensorFlow )/code_file/: img_captioning_py_file.py  instructions.txt  main_app.py
Image Captioning ( TensorFlow )/necessary_files/: descriptions.pkl  ixtoword.pkl  missing.txt  model.json  vocab.pkl  wordtoix.pkl
Image Captioning ( TensorFlow )/notebook/: Image_Captioning(TensorFlow).ipynb
Image Classification ( Pytorch & TensorFlow )/: README.md  fashion_mnist_with_TensorFlow.ipynb  fashion_mnist_with_pytorch.ipynb
Image Recognition ( dlib, mtcnn, haarcascade )/: Image_Recognition ( face recognition , dlib, mtcnn ).ipynb
Image Segmentation ( Pytorch )/: README.md  dataset.py  info.txt  model.py  train.py  utils.py
Image Similarity( ONNX, C++, Python)/: CMakeLists.txt  README.md  export_custom_op.py  instuctions.txt  main.cpp  models.py  setup.py
Image Similarity( ONNX, C++, Python)/models/: model.onnx  model.txt
OCR Line Detector/: README.md
Object Detection ( Yolov1 & Yolov3 )/: README.md
Object Detection ( Yolov1 & Yolov3 )/YOLOv1/: dataset.py  loss.py  model.py  train.py  utils.py
Object Detection ( Yolov1 & Yolov3 )/YOLOv1/yolov1_notebook/: info.txt  (+1 more)
Object Detection ( Yolov1 & Yolov3 )/YOLOv3/: config.py  dataset.py  loss.py  model.py  train.py  utils.py  yolov3-from-scratch.ipynb
